--- a/estilos.css
+++ b/estilos.css
@@ -42,30 +42,38 @@ a:active {
 
 
 /* --- Cabeçalho --- */
-#cabecalho {
+header {
   background-color: rgba(0, 0, 0, .95);
   box-shadow: 2px 10px 10px rgba(0,0,0, .25);
   padding-top: 1em;
   text-align: center;
 }
 
-#cabecalho ul {
+header ul {
   background-color: rgba(0, 204, 147, 0.53);
 }
 
-#cabecalho a {
+header a {
   text-decoration: none;
   text-shadow: 1px 1px black;
 }
 
-#menu-de-navegacao ul {
+nav ul {
   margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+nav li {
+  display: inline-block;
+  padding: 8px 0;
+  margin: 0 16px;
 }
 
 
 
 /* --- Conteúdo principal da página --- */
-#conteudo-principal {
+main {
   padding-left: 2.5%;
   transition: opacity 1s linear;
   padding-bottom: 3em;
@@ -89,10 +97,22 @@ a:active {
   margin-left: 2.5%;
   margin-right: 2.5%;
   display: inline-block;
+  position: relative;
 }
 
 #posts-principais .post .titulo {
   text-shadow: 1px 1px black;
+  position: absolute;
+  top: 20px;
+  padding: 10px;
+  opacity: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: all 200ms ease;
+}
+
+#posts-principais .post .titulo:hover {
+  top: 6px;
+  opacity: 1;
 }
 
 #posts-principais .post img {
@@ -103,6 +123,16 @@ a:active {
   margin-bottom: .5em;
 }
 
+
+
+.novidade::before {
+  content: "Novidade!";
+  display: inline-block;
+  background: rgb(30, 158, 36);
+  border: 1px;
+  border-radius: 4px;
+  padding: 2px;
+}
 
 
 
@@ -147,11 +177,21 @@ a:active {
   background-size: 300px;
   box-shadow: -4px 0 10px rgba(0, 0, 0, 0.5);
   text-align: center;
+  box-sizing: border-box;
+  cursor: pointer;
+  position: sticky;
+  top: 0;
 }
 
 #tags h1 {
   margin-bottom: 1em;
   text-shadow: 2px 2px #000;
+}
+
+#tags span:active {
+  position: relative;
+  right: 2px;
+  top: -2px
 }
 
 .tag-1,
@@ -174,18 +214,44 @@ a:active {
   font-size: 150%;
 }
 
+/* --- Fantasminhas --- */
+#boo-1 {
+  position: absolute;
+  left: 60vw;
+  top: 80vh;
+}
 
+#boo-2 {
+  position: absolute;
+  left: 70vw;
+  top: 100vh;
+}
 
+#boo-3 {
+  position: absolute;
+  left: 80vw;
+  top: 80vh;
+}
+
+.boo {
+  width: 40px;
+  transition: all 200ms ease;
+  opacity: 0.2;
+}
+
+.boo:hover {
+  opacity: 1;
+}
 
 
 /* --- Rodapé --- */
-#rodape {
+footer {
   background-color: rgba(0, 0, 0, .7);
   padding: 1em;
   display: flex;
 }
 
-#rodape .logo-rodape {
+footer .logo-rodape {
   margin-right: 2em;
 }
 
